Basic linear algebra

--- a/10 - Basic linear algebra.ipynb
+++ b/10 - Basic linear algebra.ipynb
@@ -18,19 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 Matrix{Int64}:\n",
-       " 2  4  4\n",
-       " 3  3  2\n",
-       " 2  2  4"
+       " 2  3  3\n",
+       " 2  4  2\n",
+       " 4  2  2"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        " 1.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,19 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " 10.0\n",
-       "  8.0\n",
-       "  8.0"
+       " 8.0\n",
+       " 8.0\n",
+       " 8.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,19 +112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 adjoint(::Matrix{Int64}) with eltype Int64:\n",
-       " 2  3  2\n",
-       " 4  3  2\n",
-       " 4  2  4"
+       " 2  2  4\n",
+       " 3  4  2\n",
+       " 3  2  2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,19 +142,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "search: \u001b[0m\u001b[1mt\u001b[22m\u001b[0m\u001b[1mr\u001b[22m\u001b[0m\u001b[1ma\u001b[22m\u001b[0m\u001b[1mn\u001b[22m\u001b[0m\u001b[1ms\u001b[22m\u001b[0m\u001b[1mp\u001b[22m\u001b[0m\u001b[1mo\u001b[22m\u001b[0m\u001b[1ms\u001b[22m\u001b[0m\u001b[1me\u001b[22m\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{verbatim}\n",
+       "transpose(A)\n",
+       "\\end{verbatim}\n",
+       "Lazy transpose. Mutating the returned object should appropriately mutate \\texttt{A}. Often, but not always, yields \\texttt{Transpose(A)}, where \\texttt{Transpose} is a lazy transpose wrapper. Note that this operation is recursive.\n",
+       "\n",
+       "This operation is intended for linear algebra usage - for general data manipulation see \\href{@ref Base.permutedims}{\\texttt{permutedims}}, which is non-recursive.\n",
+       "\n",
+       "\\section{Examples}\n",
+       "\\begin{verbatim}\n",
+       "julia> A = [3+2im 9+2im; 8+7im  4+6im]\n",
+       "2×2 Matrix{Complex{Int64}}:\n",
+       " 3+2im  9+2im\n",
+       " 8+7im  4+6im\n",
+       "\n",
+       "julia> transpose(A)\n",
+       "2×2 transpose(::Matrix{Complex{Int64}}) with eltype Complex{Int64}:\n",
+       " 3+2im  8+7im\n",
+       " 9+2im  4+6im\n",
+       "\\end{verbatim}\n"
+      ],
+      "text/markdown": [
+       "```\n",
+       "transpose(A)\n",
+       "```\n",
+       "\n",
+       "Lazy transpose. Mutating the returned object should appropriately mutate `A`. Often, but not always, yields `Transpose(A)`, where `Transpose` is a lazy transpose wrapper. Note that this operation is recursive.\n",
+       "\n",
+       "This operation is intended for linear algebra usage - for general data manipulation see [`permutedims`](@ref Base.permutedims), which is non-recursive.\n",
+       "\n",
+       "# Examples\n",
+       "\n",
+       "```jldoctest\n",
+       "julia> A = [3+2im 9+2im; 8+7im  4+6im]\n",
+       "2×2 Matrix{Complex{Int64}}:\n",
+       " 3+2im  9+2im\n",
+       " 8+7im  4+6im\n",
+       "\n",
+       "julia> transpose(A)\n",
+       "2×2 transpose(::Matrix{Complex{Int64}}) with eltype Complex{Int64}:\n",
+       " 3+2im  8+7im\n",
+       " 9+2im  4+6im\n",
+       "```\n"
+      ],
+      "text/plain": [
+       "\u001b[36m  transpose(A)\u001b[39m\n",
+       "\n",
+       "  Lazy transpose. Mutating the returned object should appropriately mutate \u001b[36mA\u001b[39m.\n",
+       "  Often, but not always, yields \u001b[36mTranspose(A)\u001b[39m, where \u001b[36mTranspose\u001b[39m is a lazy\n",
+       "  transpose wrapper. Note that this operation is recursive.\n",
+       "\n",
+       "  This operation is intended for linear algebra usage - for general data\n",
+       "  manipulation see \u001b[36mpermutedims\u001b[39m, which is non-recursive.\n",
+       "\n",
+       "\u001b[1m  Examples\u001b[22m\n",
+       "\u001b[1m  ≡≡≡≡≡≡≡≡≡≡\u001b[22m\n",
+       "\n",
+       "\u001b[36m  julia> A = [3+2im 9+2im; 8+7im  4+6im]\u001b[39m\n",
+       "\u001b[36m  2×2 Matrix{Complex{Int64}}:\u001b[39m\n",
+       "\u001b[36m   3+2im  9+2im\u001b[39m\n",
+       "\u001b[36m   8+7im  4+6im\u001b[39m\n",
+       "\u001b[36m  \u001b[39m\n",
+       "\u001b[36m  julia> transpose(A)\u001b[39m\n",
+       "\u001b[36m  2×2 transpose(::Matrix{Complex{Int64}}) with eltype Complex{Int64}:\u001b[39m\n",
+       "\u001b[36m   3+2im  8+7im\u001b[39m\n",
+       "\u001b[36m   9+2im  4+6im\u001b[39m"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "?transpose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 transpose(::Matrix{Int64}) with eltype Int64:\n",
-       " 2  3  2\n",
-       " 4  3  2\n",
-       " 4  2  4"
+       " 2  2  4\n",
+       " 3  4  2\n",
+       " 3  2  2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,19 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×3 Matrix{Int64}:\n",
-       " 17  21  22\n",
-       " 21  29  30\n",
-       " 22  30  36"
+       " 24  22  18\n",
+       " 22  29  21\n",
+       " 18  21  17"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +308,7 @@
        " 1.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,19 +326,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×2 Matrix{Float64}:\n",
-       " 0.857677  0.844745\n",
-       " 0.761544  0.00556007\n",
-       " 0.858307  0.945107"
+       " 0.518301   0.284985\n",
+       " 0.855072   0.227019\n",
+       " 0.0102318  0.365172"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,18 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       " 10.671282490997186\n",
-       " -0.23673103091602224"
+       "  3.5491061848783576\n",
+       " 21.762001096807644"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,19 +378,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×2 Matrix{Float64}:\n",
-       " 0.419272   0.419272\n",
-       " 0.0771968  0.0771968\n",
-       " 0.789389   0.789389"
+       " 0.0222053  0.0222053\n",
+       " 0.14772    0.14772\n",
+       " 0.563893   0.563893"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,18 +402,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Vector{Float64}:\n",
-       " 6.911188009717366\n",
-       " 6.911188009717363"
+       " 8.625802335202868\n",
+       " 8.625802335202872"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,18 +431,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2×3 Matrix{Float64}:\n",
-       " 0.456691  0.726932  0.871714\n",
-       " 0.946701  0.523393  0.776277"
+       " 0.331598  0.220304  0.437562\n",
+       " 0.961089  0.110671  0.920583"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,19 +454,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3-element Vector{Float64}:\n",
-       " -0.9440933746386968\n",
-       "  0.9494588198150655\n",
-       "  0.7679512373794606"
+       " -0.9561604180565435\n",
+       "  3.2339835416675187\n",
+       "  1.28647325621642"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,23 +497,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v = [1,2,3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "using LinearAlgebra"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dot_v = dot(v, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -442,6 +572,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dot_v = v ⋅ v\n",
+    "@assert dot_v == 14"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -451,15 +591,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×3 adjoint(::Vector{Int64}) with eltype Int64:\n",
+       " 1  2  3"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Int64}:\n",
+       " 1  2  3\n",
+       " 2  4  6\n",
+       " 3  6  9"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outer_v = v * v'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "@assert outer_v == [1 2 3\n",
@@ -469,7 +650,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Int64}:\n",
+       " 0\n",
+       " 0\n",
+       " 0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_v = cross(v, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -488,11 +694,18 @@
    "source": [
     "@assert cross_v == [0, 0, 0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.6.4",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -501,7 +714,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.6.4"
   }
  },
  "nbformat": 4,
